# waveform-reconstructor-analyzer

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  orchestration-plan.md  project-charter.md  project-state.md  requirements.md  risk-register.md  traceability-matrix.md
.github/workflows/: ci.yml
crates/ferrisoxide-cli/: Cargo.toml
crates/ferrisoxide-cli/src/: main.rs
crates/ferrisoxide-control-schema/: Cargo.toml
crates/ferrisoxide-core/: Cargo.toml
crates/ferrisoxide-core/src/: analysis.rs  config.rs  criteria.rs  csv.rs  error.rs  feature.rs  filter.rs  lib.rs  model.rs  report.rs  runtime_profile.rs  transform_catalog.rs
crates/ferrisoxide-core/tests/: criteria_engine.rs  csv_fixture.rs  heated_actuator.rs  rule_parity.rs
crates/ferrisoxide-daq/: Cargo.toml
crates/ferrisoxide-deployment/: Cargo.toml  README.md
crates/ferrisoxide-embedded/: Cargo.toml  README.md  no_std-design.md
crates/ferrisoxide-embedded/src/: lib.rs
crates/ferrisoxide-gui/: Cargo.toml
crates/ferrisoxide-gui/src/: lib.rs  main.rs  native.rs
crates/ferrisoxide-measurements/: Cargo.toml  README.md
crates/ferrisoxide-plot/: Cargo.toml
crates/ferrisoxide-rule-engine/: Cargo.toml  README.md
crates/ferrisoxide-rule-schema/: Cargo.toml  README.md
crates/ferrisoxide-signal/: Cargo.toml  README.md  no_std-design.md
crates/ferrisoxide-simulator/: Cargo.toml
crates/ferrisoxide-verification-schema/: Cargo.toml
crates/ferrisoxide-workflow/: Cargo.toml
crates/wra-core/: Cargo.toml
crates/wra-core/src/: analysis.rs  config.rs  criteria.rs  csv.rs  filter.rs  model.rs  report.rs
crates/wra-core/tests/: criteria_engine.rs
crates/wra-embedded/: Cargo.toml  README.md  no_std-design.md
crates/wra-measurements/: Cargo.toml  README.md
crates/wra-plot/: Cargo.toml
crates/wra-signal/: Cargo.toml  README.md  no_std-design.md
decisions/: ADR-001-initial-architecture.md  ADR-003-filter-pipeline-architecture.md  ADR-004-portable-rule-package-architecture.md  ADR-005-ferrisoxide-brand-architecture.md  ADR-006-ferrisoxide-signal-identity-adoption.md  ADR-007-repository-host-ferrisoxide.md
docs/: abstraction-review.md  adc-quantization.md  analog-transform-taxonomy.md  architecture.md  artifact-contract.md  batch-analysis-workflow.md  benchmarking.md  brand-001-ferrisoxide-pipeline-report.md  brand-002-ferrisoxide-signal-rename-pipeline-report.md  brand-architecture.md  code-review.md  community-report.md  comprehensive-filter-signal-conditioning-roadmap.md  config-reference.md  control-config-schema.md  controller-config-parity.md  controller-in-the-loop-workflow.md  controller-operating-modes.md  criteria-dsl-migration.md  criteria-dsl.md  current-transform-metadata-mapping.md  daq-abstraction.md  dependency-review.md  desktop-user-workflow-roadmap.md  desktop-user-workflow.md  docs-001-readme-product-guide-pipeline-report.md  documentation-audit-2026-05-31.md  documentation-review.md  egui-workflow-shell-roadmap.md  embedded-roadmap.md  end-user-design-review.md  environment.md  environmental-test-use-cases.md  evaluation-report.md  event-validation-transforms.md  filter-behavior.md  hand-off.md  heated-actuator-qualification-suite.md  implementation-report.md  m1-001-csv-parser-edge-cases.md  (+104 more)
docs/architecture/: ferrisoxide-overview.md
embedded/: README.md
embedded/arm64/: README.md
embedded/arm64/qemu/: Cargo.toml  README.md
embedded/arm64/qemu/src/: lib.rs
embedded/fixtures/: README.md
examples/: adc-quantized-config.toml  basic-config.toml  basic-dsl-config.toml  batch-analysis.toml  m11-transform-config.toml  m14-high-pass-baseline-config.toml  m21-linear-pointwise-package-config.toml  m26-data-cleaning-config.toml  m26-data-cleaning-waveform.csv  m27-pointwise-config.toml  m27-pointwise-waveform.csv  m28-smoothing-config.toml  m28-smoothing-waveform.csv  m29-frequency-config.toml  m29-frequency-waveform.csv  m30-resampling-config.toml  m30-resampling-waveform.csv  m31-calculus-config.toml  m31-calculus-waveform.csv  m32-statistics-config.toml  m32-statistics-filters-config.toml  m32-statistics-waveform.csv  m33-spectrum-config.toml  m33-spectrum-waveform.csv  m34-fault-adc-config.toml  m34-fault-adc-waveform.csv  m35-domain-config.toml  m35-domain-waveform.csv  m42-desktop-workflow-config.toml  m42-desktop-workflow-waveform.csv
examples/rule-package/: linear-pointwise-rules.json  linear-pointwise-rules.toml  rules.json  rules.toml  unsupported-clamp-rules.json  unsupported-clamp-rules.toml
examples/test-verification-config/: test-verification-config.toml
scripts/: benchmark-large-csv.sh
tests/configs/: bounce-transient.toml  criteria-engine-pass.toml  glitch-fail.toml  invalid-bad-syntax.toml  invalid-dsl-bad-state.toml  invalid-dsl-equal-pulse-without-selection.toml  invalid-dsl-inverted-edge-thresholds.toml  invalid-dsl-missing-measurement.toml  invalid-dsl-missing-requirement-unit.toml  invalid-dsl-missing-requirement-value.toml  invalid-dsl-missing-threshold.toml  invalid-dsl-unknown-operator.toml  invalid-empty-channels.toml  invalid-missing-adc-field.toml  invalid-missing-criteria.toml  invalid-missing-glitch-field.toml  invalid-missing-transient-event-field.toml  invalid-mixed-legacy-dsl-criterion.toml  invalid-negative-tolerance.toml  invalid-unsupported-criterion.toml  multi-channel.toml  slow-rise-fail.toml  transient-event-dropout-fail.toml
tests/controller_parity/: README.md
tests/fixtures/: clean_square_wave.csv  multi_channel.csv  noisy_square_wave.csv  plot_three_axis.csv  slow_rise_fall_signal.csv
tests/golden/: criteria_engine_pass.json  glitch_fail.json  slow_rise_fail.json  transient_event_dropout_fail.json
tests/parity/: expected_result.json  rules_001.toml  waveform_001.csv
validation/: README.md
validation/benchmarks/: README.md
validation/environmental_cases/: README.md  contact_bounce.csv  contact_bounce.toml  dropout_event.csv  dropout_event.toml  expected-measurements.md
validation/filter_response/: README.md
validation/known_answer/: README.md  expected-measurements.md  square_wave_tolerance.csv  (+1 more)
(+44 files in other folders)
