[workspace]
members = [
    "crates/ferrisoxide-core",
    "crates/ferrisoxide-cli",
    "crates/ferrisoxide-embedded",
    "crates/ferrisoxide-measurements",
    "crates/ferrisoxide-plot",
    "crates/ferrisoxide-rule-engine",
    "crates/ferrisoxide-rule-schema",
    "crates/ferrisoxide-signal",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kota-wilson/ferrisoxide"
rust-version = "1.76"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
csv = "1"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
