[package]
name = "ferrisoxide-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
ferrisoxide-measurements = { path = "../ferrisoxide-measurements" }
ferrisoxide-rule-engine = { path = "../ferrisoxide-rule-engine" }

[dev-dependencies]
ferrisoxide-rule-schema = { path = "../ferrisoxide-rule-schema" }
toml.workspace = true

[lints]
workspace = true
