[package]
name = "ferrisoxide-embedded"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ferrisoxide-signal = { path = "../ferrisoxide-signal" }

[dev-dependencies]
ferrisoxide-rule-engine = { path = "../ferrisoxide-rule-engine" }

[lints]
workspace = true
