[package]
name = "ferrisoxide-arm64-qemu-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
path = "src/lib.rs"

[dependencies]
ferrisoxide-embedded = { path = "../../../crates/ferrisoxide-embedded" }
ferrisoxide-signal = { path = "../../../crates/ferrisoxide-signal" }
